# omnisense

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
assets/sample_audio/: sample.aiff
notebooks/: colab_notebook.ipynb
omnisense/: __init__.py  app.py  config.py
omnisense/pipelines/: audio.py  base.py  nlp.py  search.py  vision.py
omnisense/utils/: download.py  logger.py  media.py  text.py  vision.py
tests/: test_nlp_pipeline.py  test_pipelines.py  test_search.py  test_search_pipeline.py  test_utils.py
