[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnisense"
version = "0.2.0"
description = "Temporal video search — find exactly when something was said"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnisense*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
# removed --cov flags: pytest-cov not in requirements.txt for this branch
addopts = "-v"
